@@ -1,5 +1,10 @@
 2008-04-13  Jürg Billeter  <j@bitron.ch>
 
+	* compiler/valacompiler.vala: enable non-null types by default,
+	  replace --enable-non-null commandline option by --disable-non-null
+
+2008-04-13  Jürg Billeter  <j@bitron.ch>
+
 	* */*.vala: fix build when using non-null types
 
 2008-04-13  Jürg Billeter  <j@bitron.ch>
